Updated stylings and started work on masonry

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="content.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
     <!-- Content -->
     <div id="content" class="thinner">
         <div id="introSquare" class="container">
-            <div class="square">
+            <div class="orange">
                 Lorem ipsum dolor sit amet, consectetur
                 adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna
@@ -45,11 +45,35 @@
         </div>
 
         <!--  Container for masonry  -->
-        <div>
-            <div>
+        <div id="masonry">
+            <div class="square">
                 Lorem ipsum dolor sit amet,
                 consectetur
                 adipiscing elit
+            </div>
+
+            <div class="article">
+                Article
+            </div>
+
+            <div class="article">
+                Article
+            </div>
+
+            <div class="square">
+                Lorem ipsum dolor sit amet,
+                consectetur
+                adipiscing elit
+            </div>
+
+            <div class="square">
+                Lorem ipsum dolor sit amet,
+                consectetur
+                adipiscing elit
+            </div>
+
+            <div class="article">
+                Article
             </div>
         </div>
     </div>
