--- a/index.html
+++ b/index.html
@@ -46,34 +46,49 @@
 
         <!--  Container for masonry  -->
         <div id="masonry">
-            <div class="square">
+            <div class="blue square">
                 Lorem ipsum dolor sit amet,
                 consectetur
                 adipiscing elit
             </div>
 
             <div class="article">
-                Article
+                <div class="top">
+
+                </div>
+                <div class="description">
+                    Article Name
+                </div>
             </div>
 
-            <div class="article">
-                Article
+            <div id="secondColumn" class="article">
+                <div class="top">
+
+                </div>
+                <div class="description">
+                    Article Name
+                </div>
             </div>
 
-            <div class="square">
+            <div class="orange square">
                 Lorem ipsum dolor sit amet,
                 consectetur
                 adipiscing elit
             </div>
 
-            <div class="square">
+            <div id="thirdColumn" class="green square">
                 Lorem ipsum dolor sit amet,
                 consectetur
                 adipiscing elit
             </div>
 
             <div class="article">
-                Article
+                <div class="top">
+
+                </div>
+                <div class="description">
+                    Article Name
+                </div>
             </div>
         </div>
     </div>
