Finished flexbox masonry and styling website

--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
         <!--  Container for masonry  -->
         <div id="masonry">
             <div class="blue square">
-                Lorem ipsum dolor sit amet,
-                consectetur
-                adipiscing elit
+                <p>
+                    Lorem ipsum dolor sit amet,
+                    consectetur
+                    adipiscing elit
+                </p>
             </div>
 
             <div class="article">
@@ -57,7 +59,13 @@
 
                 </div>
                 <div class="description">
-                    Article Name
+                    <h3>Article Name</h3>
+
+                    <p>Lorem ipsum dolor sit amet,
+                        consectetuer adipiscing elit, sed
+                        diam nonummy nibh.</p>
+
+                    <button>Learn More</button>
                 </div>
             </div>
 
@@ -66,28 +74,44 @@
 
                 </div>
                 <div class="description">
-                    Article Name
+                    <h3>Article Name</h3>
+
+                    <p>Lorem ipsum dolor sit amet,
+                        consectetuer adipiscing elit, sed
+                        diam nonummy nibh.</p>
+
+                    <button>Learn More</button>
                 </div>
             </div>
 
             <div class="orange square">
-                Lorem ipsum dolor sit amet,
-                consectetur
-                adipiscing elit
+                <p>
+                    Lorem ipsum dolor sit amet,
+                    consectetur
+                    adipiscing elit
+                </p>
             </div>
 
             <div id="thirdColumn" class="green square">
-                Lorem ipsum dolor sit amet,
-                consectetur
-                adipiscing elit
+                <p>
+                    Lorem ipsum dolor sit amet,
+                    consectetur
+                    adipiscing elit
+                </p>
             </div>
 
-            <div class="article">
+            <div class="article" id="lastArticle">
                 <div class="top">
 
                 </div>
                 <div class="description">
-                    Article Name
+                    <h3>Article Name</h3>
+
+                    <p>Lorem ipsum dolor sit amet,
+                        consectetuer adipiscing elit, sed
+                        diam nonummy nibh.</p>
+
+                    <button>Learn More</button>
                 </div>
             </div>
         </div>
