Added missing title to html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <title>Mockup Website</title>
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="content.css">
@@ -46,7 +47,7 @@
 
         <!--  Container for masonry  -->
         <div id="masonry">
-            <div class="blue square">
+            <div class="bold blue square">
                 <p>
                     Lorem ipsum dolor sit amet,
                     consectetur
